--- a/.github/workflows/build-linux-arm.yml
+++ b/.github/workflows/build-linux-arm.yml
@@ -45,14 +45,30 @@ jobs:
     name: build ${{ inputs.version }} on ${{ inputs.operating-system }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      # Cache composer dependencies
+      - id: cache-composer-deps
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: composer-dependencies
+
+      # If there's no Composer cache, install dependencies
+      - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
+        run: composer update --no-dev --classmap-authoritative
+
+      - name: Generate hashed key for download cache
+        run: |
+          INPUT_HASH=$(echo "${{ runner.os }}-${{ inputs.version }}-${{ inputs.extensions }}" | sha256sum | awk '{print $1}')
+          echo "INPUT_HASH=${INPUT_HASH}" >> $GITHUB_ENV
 
       # Cache downloaded source
       - id: cache-download
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: downloads
-          key: php-${{ inputs.version }}-dependencies-${{ inputs.extensions }}
+          key: php-${{ env.INPUT_HASH }}
 
       # With or without debug
       - if: inputs.debug == true
@@ -75,31 +91,31 @@ jobs:
 
       # Upload cli executable
       - if: ${{ inputs.build-cli == true }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: php-${{ inputs.version }}-linux-${{ inputs.operating-system }}
           path: buildroot/bin/php
 
       # Upload micro self-extracted executable
       - if: ${{ inputs.build-micro == true }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: micro-${{ inputs.version }}-linux-${{ inputs.operating-system }}
           path: buildroot/bin/micro.sfx
 
       # Upload fpm executable
       - if: ${{ inputs.build-fpm == true }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: php-fpm-${{ inputs.version }}-linux-${{ inputs.operating-system }}
           path: buildroot/bin/php-fpm
 
       # Upload extensions metadata
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: license-files
           path: buildroot/license/
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: build-meta
           path: |
