--- a/.github/workflows/build-windows-x86_64.yml
+++ b/.github/workflows/build-windows-x86_64.yml
@@ -34,9 +34,37 @@ env:
 jobs:
   build:
     name: build ${{ inputs.version }} on Windows x86_64
-    runs-on: windows-latest
+    # runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v4
+        # setup Developer Command Prompt for Microsoft Visual C++
+      - uses: ilammy/msvc-dev-cmd@v1.9.0
+        with:
+          arch: amd64
+
+      - name: "Install PHP for official runners"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          coverage: none
+          tools: composer:v2
+          php-version: 8.2
+          ini-values: memory_limit=-1
+
+      - name: set PHP SDK  Github ENV variables
+        run: |
+          echo "PHP_SDK_ARCH=x64" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_BIN_PATH=D:\a\static-php-cli\static-php-cli\php-sdk-binary-tools\bin" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_MSYS2_PATH=D:\a\static-php-cli\static-php-cli\php-sdk-binary-tools\msys2\usr\bin" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_OS_ARCH=x64" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_PHP_CMD=D:\a\static-php-cli\static-php-cli\php-sdk-binary-tools\bin\php\do_php.bat" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_ROOT_PATH=D:\a\static-php-cli\static-php-cli\php-sdk-binary-tools" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_VC_DIR=C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_VC_TOOLSET_VER=%VCToolsVersion%" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_VS=vs17" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_VS_NUM=17" >> $Env:GITHUB_ENV
+          echo "PHP_SDK_VS_SHELL_CMD=C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat amd64" >> $Env:GITHUB_ENV
+          echo "PATH=D:\a\static-php-cli\static-php-cli\php-sdk-binary-tools\bin;D:\a\static-php-cli\static-php-cli\php-sdk-binary-tools\msys2\usr\bin;%PATH%"  >> $Env:GITHUB_ENV
 
       # Cache composer dependencies
       - id: cache-composer-deps
