use captainhook installer instead of plugin composer

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "allow-plugins": {
             "phpstan/extension-installer": true,
             "captainhook/hook-installer": true,
+            "captainhook/plugin-composer": true,
             "captainhook/captainhook-phar": true
         },
         "optimize-autoloader": true,
