--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -104,7 +104,7 @@ jobs:
     name: "Build PHP Test (PHP ${{ matrix.php }} ${{ matrix.os }})"
     runs-on: ${{ matrix.os }}
     timeout-minutes: 120
-    if: !contains(github.event.head_commit.message, '[no build test]')
+    if: !contains(github.event.commits[0].message, '[no build test]')
     strategy:
       matrix:
         php:
