Add xattr command to prevent macOS GateKeeper block

--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -1,6 +1,8 @@
 name: Build SPC Binary
 
 on:
+  pull_request:
+    branches: [ "main" ]
   push:
     branches: [ "main" ]
   release:
@@ -110,7 +112,8 @@ jobs:
           files: dist/${{ env.filename }}
 
       - name: "Deploy to Self-Hosted Server"
-        if: github.repository == 'crazywhalecc/static-php-cli'
+        if: 0
+        # if: github.repository == 'crazywhalecc/static-php-cli'
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SERVER_SECRET_KEY }}
