--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -79,7 +79,7 @@ jobs:
             chmod +x spc
           fi
           if [ "${{ matrix.operating-system }}" = "macos-aarch64" ] || [ "${{ matrix.operating-system }}" = "macos-x86_64" ]; then
-              /usr/bin/xattr -cr spc
+              /usr/bin/xattr -cr ./spc
           fi
 
       - name: "Archive Executable"
