--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -79,8 +79,7 @@ jobs:
             chmod +x spc
           fi
           if [ "${{ matrix.operating-system }}" = "macos-aarch64" ] || [ "${{ matrix.operating-system }}" = "macos-x86_64" ]; then
-             find /usr -name "*xattr" 2>/dev/null
-             /usr/bin/xattr -cr ./spc
+             sudo xattr -cr ./spc
           fi
 
       - name: "Archive Executable"
