--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build-release-artifacts:
     name: "Build SPC Binary"
-    runs-on: ubuntu-latest
+    runs-on: macos-14
     strategy:
       matrix:
         php-version:
@@ -88,7 +88,7 @@ jobs:
             tar -czf spc-${{ matrix.operating-system }}.tar.gz spc
             echo "filename=spc-${{ matrix.operating-system }}.tar.gz" >> $GITHUB_ENV
             echo "OS=${{ matrix.operating-system }}" >> $GITHUB_ENV
-            if [ "${{ matrix.operating-system }}" == "linux-x86_64" ]; then
+            if [ "${{ matrix.operating-system }}" == "macos-aarch64" ]; then
               ./spc dev:extensions
             fi
           else
