--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -162,7 +162,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           bin/spc install-pkg upx
-          echo "UPX_CMD=$(php src/globals/test-extensions.php upx)" >> $env:$GITHUB_ENV
+          echo "UPX_CMD=$(php src/globals/test-extensions.php upx)" >> $env:GITHUB_ENV
 
       - name: "Prepare UPX for Linux"
         if: matrix.os == 'ubunut-latest'
@@ -186,4 +186,4 @@ jobs:
 
       - name: "Run Build Tests (build, windows)"
         if: matrix.os == 'windows-latest'
-        run: bin/spc build "$(php src/globals/test-extensions.php extensions)" $(php src/globals/test-extensions.php zts) $(php src/globals/test-extensions.php no_strip) $env:$UPX_CMD --with-libs="$(php src/globals/test-extensions.php libs)" --build-cli --build-micro --build-fpm --debug
+        run: bin/spc build "$(php src/globals/test-extensions.php extensions)" $(php src/globals/test-extensions.php zts) $(php src/globals/test-extensions.php no_strip) $env:UPX_CMD --with-libs="$(php src/globals/test-extensions.php libs)" --build-cli --build-micro --build-fpm --debug
