Fix windows builds

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -170,15 +170,15 @@ jobs:
           bin/spc install-pkg upx
           echo "UPX_CMD=$(php src/globals/test-extensions.php upx)" >> $GITHUB_ENV
 
+      - name: "Run Build Tests (download, *nix)"
+        if: matrix.os != 'windows-latest'
+        run: |
+            GITHUB_TOKEN=${{ env.GITHUB_TOKEN }} bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --for-libs="$(php src/globals/test-extensions.php libs)" --with-php=${{ matrix.php }} --ignore-cache-sources=php-src --debug --retry=5
 
-      - name: "Run Build Tests (download)"
-        uses: nick-fields/retry@v3
-        with:
-          timeout_minutes: 10
-          max_attempts: 3
-          retry_on: error
-          command: |
-            GITHUB_TOKEN=${{ env.GITHUB_TOKEN }} bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --for-libs="$(php src/globals/test-extensions.php libs)" --with-php=${{ matrix.php }} --ignore-cache-sources=php-src,libcares --debug --retry=3
+      - name: "Run Build Tests (download, windows)"
+        if: matrix.os == 'windows-latest'
+        run: |
+          bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --for-libs="$(php src/globals/test-extensions.php libs)" --with-php=${{ matrix.php }} --ignore-cache-sources=php-src --debug --retry=5
 
       - name: "Run Build Tests (build, *nix)"
         if: matrix.os != 'windows-latest'
