--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -173,7 +173,7 @@ jobs:
       - name: "Run Build Tests (download, *nix)"
         if: matrix.os != 'windows-latest'
         run: |
-            GITHUB_TOKEN=${{ env.GITHUB_TOKEN }} bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --for-libs="$(php src/globals/test-extensions.php libs)" --with-php=${{ matrix.php }} --ignore-cache-sources=php-src --debug --retry=5
+            GITHUB_TOKEN=${{ secrets.TEST_GH_TOKEN }} bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --for-libs="$(php src/globals/test-extensions.php libs)" --with-php=${{ matrix.php }} --ignore-cache-sources=php-src --debug --retry=5
 
       - name: "Run Build Tests (download, windows)"
         if: matrix.os == 'windows-latest'
