--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,9 @@ on:
 permissions:
   contents: read
 
+env:
+  GITHUB_TOKEN: ${{ secrets.TEST_GH_TOKEN }}
+
 jobs:
   php-cs-fixer:
     runs-on: ubuntu-latest
@@ -170,15 +173,9 @@ jobs:
           bin/spc install-pkg upx
           echo "UPX_CMD=$(php src/globals/test-extensions.php upx)" >> $GITHUB_ENV
 
-      - name: "Run Build Tests (download, *nix)"
-        if: matrix.os != 'windows-latest'
+      - name: "Run Build Tests (download)"
         run: |
-            GITHUB_TOKEN=${{ secrets.TEST_GH_TOKEN }} bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --for-libs="$(php src/globals/test-extensions.php libs)" --with-php=${{ matrix.php }} --ignore-cache-sources=php-src --debug --retry=5
-
-      - name: "Run Build Tests (download, windows)"
-        if: matrix.os == 'windows-latest'
-        run: |
-          bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --for-libs="$(php src/globals/test-extensions.php libs)" --with-php=${{ matrix.php }} --ignore-cache-sources=php-src --debug --retry=5
+            bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --for-libs="$(php src/globals/test-extensions.php libs)" --with-php=${{ matrix.php }} --ignore-cache-sources=php-src --debug --retry=5
 
       - name: "Run Build Tests (build, *nix)"
         if: matrix.os != 'windows-latest'
