--- a/.github/workflows/vitepress-deploy.yml
+++ b/.github/workflows/vitepress-deploy.yml
@@ -27,7 +27,9 @@ jobs:
       - run: yarn install --frozen-lockfile
 
       - name: "Copy Config Files"
-        run: cp -r config/* docs/.vitepress/config/
+        run: |
+          mkdir -p docs/.vitepress/config
+          cp -r config/* docs/.vitepress/config/
 
       - name: "Install PHP for official runners"
         uses: "shivammathur/setup-php@v2"
