--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -131,4 +131,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: spc${{ env.SUFFIX }}
-          name: ${{ matrix.operating-system.filename }}${{ env.SUFFIX }}
+          name: ${{ matrix.operating-system.name }}${{ env.SUFFIX }}
