Add pre-built lib feature

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -178,6 +178,12 @@ jobs:
         run: |
           bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --for-libs="$(php src/globals/test-extensions.php libs)" --with-php=${{ matrix.php }} --ignore-cache-sources=php-src --debug --retry=5 --shallow-clone
 
+      - name: "Download pre-built libraries for pkg-config"
+        if: matrix.os != 'windows-latest'
+        run: |
+          bin/spc del-download pkg-config
+          bin/spc download pkg-config --prefer-pre-built --debug
+
       - name: "Run Build Tests (build, *nix)"
         if: matrix.os != 'windows-latest'
         run: bin/spc build "$(php src/globals/test-extensions.php extensions)" $(php src/globals/test-extensions.php zts) $(php src/globals/test-extensions.php no_strip) $UPX_CMD --with-libs="$(php src/globals/test-extensions.php libs)" --build-cli --build-micro --build-fpm --debug
